@@ -1,3 +1,8 @@
+2013-09-08  Donal Fellows  <dkf@Donals-MacBook-Pro.local>
+
+	* generic/tclCmdMZ.c (StringIsCmd): [Bug 3600057]: Filled out missing
+	parts of implementation of [string is double].
+
 2013-09-01  Donal Fellows  <dkf@users.sf.net>
 
 	* generic/tclBinary.c (BinaryDecodeHex): [Bug b98fa55285]: Ensure that
